deploy/homelab/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dashboards
  labels:
    app.sullylab.de/name: dashboards
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
